# litellm-util

./: .gitignore  .releaser.toml  CHANGELOG.md  Makefile  README.md  pyproject.toml
docs/: CLI_INTERFACE.md  PROJECT_STRUCTURE.md
src/llm_cli/: __init__.py  __main__.py  main.py
src/llm_cli/commands/: __init__.py  admin.py  config.py  history.py  init.py  key.py  model.py  provider.py  team.py  usage.py
src/llm_cli/core/: __init__.py  apply.py  client.py  config.py  context.py  history.py
src/llm_cli/models/: __init__.py  apply.py  config.py  key.py  provider.py  team.py  usage.py
src/llm_cli/providers/: __init__.py  anthropic.py  azure.py  base.py  bedrock.py  cohere.py  deepseek.py  groq.py  mistral.py  ollama.py  openai.py  vertex.py
src/llm_cli/ui/: __init__.py  console.py  prompts.py  tables.py
src/llm_cli/utils/: __init__.py  clipboard.py  validators.py
template/: models.yaml
tests/: __init__.py  conftest.py
tests/test_commands/: test_usage.py
tests/test_core/: test_apply.py  test_client_integration.py  test_config.py  test_context.py
tests/test_models/: test_usage.py
tests/test_providers/: test_registry.py
