[tool.poetry]
name = "litellm-util"
version = "0.2.7"
description = "A powerful CLI tool for managing LiteLLM Proxy Server - models, virtual keys, teams, usage analytics, and multi-environment configurations."
authors = ["Hao Nguyen <haonguyen1915@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/haonguyen1915/litellm-util"
repository = "https://github.com/haonguyen1915/litellm-util"
keywords = ["litellm", "llm", "proxy", "cli", "ai", "openai", "anthropic", "api-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Typing :: Typed",
]
packages = [{include = "llm_cli", from = "src"}]

[tool.poetry.scripts]
llm = "llm_cli.main:main"

[tool.poetry.dependencies]
python = "^3.10"

# CLI Framework
typer = ">=0.12.0"

# Interactive Prompts
questionary = "^2.0.1"

# Pretty Output
rich = "^13.7.0"

# HTTP Client
httpx = "^0.27.0"

# Data Validation & Settings
pydantic = "^2.6.0"
pydantic-settings = "^2.2.0"

# Config
pyyaml = "^6.0.1"

# Clipboard
pyperclip = "^1.8.2"

# LiteLLM SDK (for model testing)
litellm = "1.82.1"
python-dotenv = "^1.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.0"
mypy = "^1.8.0"
ruff = "^0.2.0"
pre-commit = "^3.6.0"

# Type stubs
types-pyyaml = "^6.0.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
